--- a/force-app/main/default/lwc/iDoctorDetail/iDoctorDetail.html
+++ b/force-app/main/default/lwc/iDoctorDetail/iDoctorDetail.html
@@ -14,5 +14,8 @@
         <template if:false={recievedMessage}>
             <p>Select a Doctor to see details</p>
         </template>
+        <div>
+            
+        </div>
     </lightning-card>
 </template>
